--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -1,4 +1,5 @@
 @import '/src/colors';
+@import '/src/fonts';
 
 .detail {
   height: 100%;
@@ -17,7 +18,7 @@
   }
 
   &__title {
-    font-family: Ubuntu;
+    font-family: $font-system;
     color: white;
     display: flex;
     align-items: center;
@@ -39,7 +40,7 @@
     padding: 0 8px;
 
     border-radius: 8px;
-    font-family: Ubuntu;
+    font-family: $font-system;
     font-weight: normal;
     background-color: rgb(75,72,72);
     border: 1px solid rgb(43,42,42);
@@ -67,7 +68,7 @@
     align-items: center;
     justify-content: center;
 
-    font-family: Ubuntu;
+    font-family: $font-system;
     font-weight: lighter;
     font-size: 32px;
   }
@@ -90,7 +91,7 @@
       display: flex;
       align-items: center;
 
-      font-family: Ubuntu;
+      font-family: $font-system;
       font-size: 18px;
       color: $font-primary;
     }
