--- a/src/app/empty/empty.component.scss
+++ b/src/app/empty/empty.component.scss
@@ -1,3 +1,5 @@
+@import '/src/fonts';
+
 .empty {
   height: 100%;
   display: flex;
@@ -7,7 +9,7 @@
   &__text {
     display: flex;
     align-items: center;
-    font-family: Ubuntu;
+    font-family: $font-system;
     font-size: 32px;
     font-weight: 100;
     color: #333;
