--- a/src/app/shared/components/create-car-dialog/create-car-dialog.component.scss
+++ b/src/app/shared/components/create-car-dialog/create-car-dialog.component.scss
@@ -1,12 +1,13 @@
 @use '/src/mixins' as mixins;
 @import '/src/colors';
+@import '/src/fonts';
 
 .create-car-dialog {
   height: 100%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  font-family: "Ubuntu";
+  font-family: $font-system;
   background: $background-secondary;
 
   &__header {
@@ -59,7 +60,7 @@
     padding: 16px 24px;
 
     mat-form-field {
-      font-family: 'Ubuntu';
+      font-family: $font-system;
       font-weight: lighter;
       width: 100%;
 
@@ -96,7 +97,7 @@
 }
 
 .button {
-  font-family: Ubuntu;
+  font-family: $font-system;
   font-weight: normal;
   color: $font-primary;
   border-radius: 8px;
