--- a/src/app/shared/components/create-record/create-record.component.scss
+++ b/src/app/shared/components/create-record/create-record.component.scss
@@ -1,4 +1,5 @@
 @import '/src/colors';
+@import '/src/fonts';
 
 .create-record {
 
@@ -9,7 +10,7 @@
     align-items: center;
     justify-content: space-between;
 
-    font-family: "Ubuntu";
+    font-family: $font-system;
     background-color: rgb(50, 48, 48);
   }
 
@@ -36,8 +37,7 @@
     padding: 16px 32px;
 
     mat-form-field {
-      font-family: 'Ubuntu';
-      font-weight: lighter;
+      font-family: $font-system;
       width: 100%;
 
       &.mat-form-field-invalid mat-label {
@@ -63,7 +63,7 @@
 }
 
 .button {
-  font-family: Ubuntu;
+  font-family: $font-system;
   font-weight: normal;
   color: $font-primary;
   border-radius: 8px;
