--- a/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.scss
+++ b/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.scss
@@ -1,4 +1,5 @@
 @import '/src/colors';
+@import '/src/fonts';
 
 :host {
   display: block;
@@ -15,7 +16,7 @@
     gap: 4px;
     height: 36px;
 
-    font-family: 'Ubuntu';
+    font-family: $font-system;
     font-weight: bold;
     color: $font-primary;
   }
