--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -1,4 +1,5 @@
 @import '/src/colors';
+@import '/src/fonts';
 
 .welcome-page {
   height: 100%;
@@ -7,7 +8,7 @@
   justify-content: center;
   align-items: center;
   
-  font-family: Ubuntu;
+  font-family: $font-system;
   user-select: none;
 
   &__content {
@@ -46,7 +47,7 @@
   &__get-started-button {
     margin-bottom: 16px;
     padding: 4px 64px;
-    font-family: Ubuntu;
+    font-family: $font-system;
     font-weight: normal;
     background-color: #0d7f1e;
     border-color: rgba(0,0,0,0.56);
@@ -55,7 +56,7 @@
   }
 
   &__skip-link {
-    font-family: Ubuntu;
+    font-family: $font-system;
     font-weight: 100;
     color: #0066CC;
   }
