--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -28,30 +28,14 @@
     border-top: 1px solid rgba(0,0,0,0.1);
   }
 
-  .button {
-    font-family: $font-system;
-    font-weight: normal;
-    color: $font-primary;
-    min-width: initial;
-    padding: 0 8px;
-
-    border-radius: 8px;
-
-    &__switcher-icon {
-      transition: transform 0.2s ease-in;
-    }
+  .switcher-icon {
+    transition: transform 0.2s ease-in;
   }
 
   app-tabs {
     flex-grow: 1;
 
     transition: opacity 0.15s ease-in 0.15s;
-  }
-
-  .button__create {
-    background-color: rgb(75,72,72);
-    border: 1px solid rgb(43,42,42);
-    color: #fff;
   }
 
   &--minimize {
@@ -72,7 +56,7 @@
       gap: 8px;
     }
 
-    .button__switcher-icon {
+    .switcher-icon {
       transform: rotate(180deg);
       color: white;
     }
