refactor(app): buttons

--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -4,9 +4,9 @@
       {{categoryDetails.data.name}}
     </div>
     <div class="category-details__buttons">
-      <button class="category-details__export-button" mat-button (click)="onPrint()">
+      <app-button button-common (click)="onPrint()">
         <mat-icon>picture_as_pdf</mat-icon>
-      </button>
+      </app-button>
     </div>
   </div>
 
