--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -1,1 +1,1 @@
-$font-system: system-ui;
+$font-system: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
