--- a/src/app/shared/components/delete-dialog/delete-dialog.component.scss
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.scss
@@ -1,64 +1,79 @@
 @import '/src/colors';
 @import '/src/fonts';
+@import '/src/animations';
 
 .delete-dialog {
+  padding: 16px 16px 24px 16px;
+
   font-family: $font-system;
+  user-select: none;
+
+  &__close-button-container {
+    display: flex;
+    justify-content: flex-end;
+  }
 
   &__header {
-    height: 42px;
-    padding: 4px 8px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+  }
 
-    background-color: rgb(50, 48, 48);
+  &__title {
+    text-align: center;
+    font-size: 24px;
+    color: $font-primary;
+  }
+
+  &__text {
+    line-height: 1.4;
+    color: $font-secondary;
   }
 
   &__header-text {
     color: white;
   }
 
-  &__button-container {
-    display: flex;
-    align-items: center;
+  &__icon {
+    height: 72px;
+    width: 72px;
 
-    &:first-child {
-      margin-right: auto;
-      justify-content: flex-start;
-    }
-
-    &:last-child {
-      margin-left: auto;
-      justify-content: flex-end;
-    }
+    font-size: 72px;
+    color: $color-dangerous;
+    animation: squeeze 0.5s ease-in 0.2s;
   }
 
   &__content {
-    padding: 32px;
+    padding: 0 16px;
+    margin-bottom: 24px;
+
+    text-align: center;
   }
 
   &__footer {
     display: flex;
-    justify-content: flex-end;
-    padding: 0px 24px 16px 24px;
+    justify-content: center;
+    gap: 8px;
   }
 
   .button {
+    min-width: 128px;
+
+    border-radius: 8px;
     font-family: $font-system;
     font-weight: normal;
     color: $font-primary;
-    border-radius: 8px;
   }
   
   .button__submit {
-    background-color: #c7162b;
-    border-color: #c7162b;
-    color: #fff;
+    background-color: $color-dangerous;
+    border-color: $color-dangerous;
+    color: white;
   }
 
   .button__cancel {
-    background-color: rgb(75, 72, 72);
-    border-color: rgb(48,47,47);
-    color: #fff;
+    background-color: #f1f1f1;
+    border-color: #f1f1f1;
+    color: $font-primary;
   }
 }
