--- a/src/app/empty/empty.component.scss
+++ b/src/app/empty/empty.component.scss
@@ -18,7 +18,7 @@
     font-family: $font-system;
     font-size: 32px;
     font-weight: normal;
-    color: $background-header-primary;
+    color: $font-secondary;
   }
 
   &__icon {
