feat(categories-tree): sub node improvement

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,7 +1,7 @@
 $color-primary: var(--primary-color);
 $color-secondary: var(--secondary-color);
 $color-dangerous: #c7162b;
-$color-border: #bfbfbf;
+$color-border: #dce1e6;
 
 $font-primary: #111;
 $font-secondary: #3c3a3a;
