chore(detail): styles

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -69,8 +69,9 @@
     justify-content: center;
 
     font-family: $font-system;
-    font-weight: lighter;
+    font-weight: normal;
     font-size: 32px;
+    color: $font-secondary;
   }
 
   &__empty-text {
