--- a/src/app/shared/components/create-dialog/create-dialog.component.scss
+++ b/src/app/shared/components/create-dialog/create-dialog.component.scss
@@ -2,64 +2,6 @@
 @import '/src/fonts';
 
 .create-dialog {
-  font-family: $font-system;
-
-  &__header {
-    height: 42px;
-    padding: 4px 8px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    background-color: rgb(50, 48, 48);
-  }
-
-  &__header-text {
-    color: white;
-  }
-
-  &__button-container {
-    display: flex;
-    align-items: center;
-
-    &:first-child {
-      margin-right: auto;
-      justify-content: flex-start;
-    }
-
-    &:last-child {
-      margin-left: auto;
-      justify-content: flex-end;
-    }
-  }
-
-  &__content {
-    padding: 16px 32px;
-
-    mat-form-field {
-      font-family: $font-system;
-      width: 100%;
-
-      &.mat-form-field-invalid mat-label {
-        caret-color: #c7162b;
-        color: #c7162b !important;
-      }
-
-      mat-label {
-        color: $font-primary;
-        font-size: 20px;
-      }
-
-      input:placeholder-shown {
-        font-size: 16px;
-      }
-    }
-
-    mat-error {
-      color: #c7162b;
-    }
-  }
-
   &__option-content {
     display: flex;
     align-items: center;
@@ -78,23 +20,28 @@
     width: 18px;
     margin-right: 8px;
   }
-}
 
-.button {
-  font-family: $font-system;
-  font-weight: normal;
-  color: $font-primary;
-  border-radius: 8px;
-}
+  mat-form-field {
+    font-family: $font-system;
+    width: 100%;
+    margin-bottom: 8px;
 
-.button__submit {
-  background-color: #0d7f1e;
-  border-color: rgba(0,0,0,0.56);
-  color: #fff;
-}
+    &.mat-form-field-invalid mat-label {
+      caret-color: #c7162b;
+      color: #c7162b !important;
+    }
 
-.button__cancel {
-  background-color: rgb(75, 72, 72);
-  border-color: rgb(48,47,47);
-  color: #fff;
+    mat-label {
+      color: $font-primary;
+      font-size: 20px;
+    }
+
+    input:placeholder-shown {
+      font-size: 16px;
+    }
+  }
+
+  mat-error {
+    color: #c7162b;
+  }
 }
