refactor(app): icons

--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="category-details__buttons">
       <app-button button-common (click)="onPrint()">
-        <mat-icon>picture_as_pdf</mat-icon>
+        <mat-icon svgIcon="export-pdf-rounded"></mat-icon>
       </app-button>
     </div>
   </div>
