--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -34,7 +34,7 @@
 
   <div class="navigation__buttons">
     <app-button button-transparent appSideNavTracker>
-      <mat-icon class="switcher-icon">chevron_left</mat-icon>
+      <mat-icon class="switcher-icon" svgIcon="arrow-left-rounded"></mat-icon>
     </app-button>
   </div>
 </div>
