--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -54,7 +54,7 @@
     }
 
     .switcher-icon {
-      transform: rotate(180deg);
+      transform: rotateY(180deg);
       color: white;
     }
   }
