--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -2,7 +2,7 @@
   <header class="dialog__header">
     <div class="dialog__title">{{title}}</div>
     <app-button button-transparent (click)="onClose()">
-      <mat-icon>close</mat-icon>
+      <mat-icon svgIcon="close-rounded"></mat-icon>
     </app-button>
   </header>
   <main class="dialog__content">
