--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -90,7 +90,7 @@
     </button>
     <div class="mat-menu__divider"></div>
     <button class="menu-item menu-item--delete" mat-menu-item (click)="onDelete()">
-      <mat-icon class="mat-item__icon mat-item__icon--delete">delete</mat-icon>
+      <mat-icon class="mat-item__icon mat-item__icon--delete" svgIcon="delete-rounded"></mat-icon>
       <span>{{"MENU.DELETE" | translate}}</span>
     </button>
   </ng-template>
