refactor(settings): dialog

--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -1,14 +1,14 @@
 <section class="dialog">
-  <header class="dialog__header">
+  <header class="dialog__header" [class.dialog__header--border]="contentScrolled">
     <div class="dialog__title">{{title}}</div>
     <app-button button-transparent (click)="onClose()">
       <mat-icon svgIcon="close-rounded"></mat-icon>
     </app-button>
   </header>
-  <main class="dialog__content">
+  <main class="dialog__content" (scroll)="onScroll($event)">
     <ng-content select="[content]"></ng-content>
   </main>
-  <footer class="dialog__footer">
+  <footer *ngIf="!hideFooter" class="dialog__footer">
     <button class="button button__cancel"
             mat-button
             (click)="onClose()">
