--- a/src/app/shared/components/settings/settings.component.scss
+++ b/src/app/shared/components/settings/settings.component.scss
@@ -4,12 +4,15 @@
 
 .settings {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
 
   user-select: none;
   font-family: $font-system;
+  background: $background-secondary;
+
+  ubuntu-container:not(:last-child) {
+    margin-bottom: 16px;
+  }
 
   &__text {
     margin-right: 12px;
@@ -19,42 +22,11 @@
     overflow: hidden;
   }
 
-  &__header {
-    height: 50px;
-    padding: 4px 8px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    background-color: rgb(50, 48, 48);
-  }
-
-  &__header-text {
-    color: white;
-  }
-
-  &__button-container {
-    width: 28px;
-
-    &:first-child {
-      margin-right: auto;
-    }
-
-    &:last-child {
-      margin-left: auto;
-    }
-  }
-
   &__content {
-    @include mixins.scrollable;
-
     height: 100%;
-    padding: 16px 24px;
     display: flex;
     flex-direction: column;
     gap: 16px;
-
-    background: $background-secondary;
   }
 
   &__toggle-group {
@@ -109,7 +81,7 @@
     }
   }
 
-  .button {
+  .edit-button {
     padding: 0 12px;
     min-width: initial;
 
@@ -150,7 +122,7 @@
   .mat-form-field-ripple {
     /*change color of underline when focused*/
     background-color: var(--primary-color);
-}
+  }
 }
 
 .mat-option.mat-selected:not(.mat-option-disabled) {
