--- a/src/app/navigation/categories-tree/category-tree-displacer/category-tree-displacer.component.scss
+++ b/src/app/navigation/categories-tree/category-tree-displacer/category-tree-displacer.component.scss
@@ -18,7 +18,7 @@
     width: 2px;
     margin-left: 5px;
 
-    background: $color-border;
+    background: #f2f2f2;
   }
 
   &__sub-line {
@@ -28,8 +28,8 @@
     width: 12px;
 
     border-bottom-left-radius: 8px;
-    border-left: 2px solid $color-border;
-    border-bottom: 2px solid $color-border;
+    border-left: 2px solid #f2f2f2;
+    border-bottom: 2px solid #f2f2f2;
   }
 }
 
